Check that the tests can fail
A test never seen to fail has not been shown to test anything. Twenty
deliberate defects, each the reintroduction of a fault this project has
shipped or nearly shipped, applied one at a time with the tests that claim
to guard them.

Nineteen were caught. One was not: packaging_test searched the build script
for the string "jdk.localedata" and passed with the module removed,
because the name also appears in the script's own error message — a test
that asserted its own spelling. Its replacement parses the --add-modules
value; the parser then matched the words "--add-modules replaces" out of a
comment and returned the module list #{"replaces"}, on which every
assertion below it was vacuous. Neither announced itself.

Both are fixed, and both are now mutations in dev/mutations.edn so they
cannot come back quietly. bb mutate runs the lot.

The number-formatting expectations no longer come from calling the code
under test. i18n_test now carries the CLDR forms for all six languages as
literals, with a check that they are not all quietly the English one — which
is precisely what a runtime with no locale data returns, and how the
installers shipped for weeks.